--- a/frontend/components/header.html
+++ b/frontend/components/header.html
@@ -15,7 +15,15 @@
                 </a>
                 <ul class="nav-links">
                     <li><a href="../pages/home.html">Inicio</a></li>
-                    <li><a href="../pages/sobre-nosotros.html">Sobre Nosotros</a></li>
+                    <!-- Menú desplegable -->
+                    <li class="dropdown">
+                        <a href="../pages/sobre-nosotros.html">Sobre Nosotros</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#historia">Historia</a></li>
+                            <li><a href="#cuidados-medicos">Cuidados Médicos</a></li>
+                            <li><a href="#proyectos-futuros">Proyectos Futuros</a></li>
+                        </ul>
+                    </li>
                     <li><a href="../pages/emprendimientos.html">Emprendimientos</a></li>
                     <li><a href="../pages/contactos.html">Contactos</a></li>
                     <li><a href="../pages/donaciones.html">Donaciones</a></li>
